[package]
name = "chip8"
version = "0.1.0"
authors = ["Toni Le <toni.le@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston_window = "0.120.0"
